# SPE10

./: .gitignore  CMakeLists.txt  README.md  cell.hpp  f.hpp  main.cpp  parse.py  vars.hpp
solver/: chebyshev.h  params.h  pcg.cpp  pcg.h  vector.h
